--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ h1 {
 h2 {
   font-weight: bold;
   font-size: 24px;
-  color: #999;
+  color: #000;
   line-height: 29px;
   padding: 10px;
 }
@@ -42,7 +42,7 @@ h2 {
 h3 {
   font-style: italic;
   font-size: 20px;
-  color: #000;
+  color: #999;
   line-height: 22px;
 }
 
@@ -73,7 +73,7 @@ h5 {
 .location-text {
   font-style: italic;
   font-size: 14px;
-  color: #999;
+  color: #000;
   line-height: 16px;
   float: right;
 
@@ -81,7 +81,7 @@ h5 {
 
 p {
   font-size: 14px;
-  color: #333;
+  color: #000;
   line-height: 21px;
 }
 
@@ -124,7 +124,7 @@ a {
 }
 
 .dark-gray {
-  background-color: #4a4a4a;
+  background-color: #000;
 }
 
 /* TODO: Replace with image later */
